# updater

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
src/: main.c  main.cpp  updater.c  updater.h
src/interfaces/: network_operation.h
src/net/: connection_config.h  curl_connection.cpp  curl_connection.h
